--- a/index.html
+++ b/index.html
@@ -108,6 +108,67 @@
                 </form>
             </div>
         </section>
+
+        <section class="hotels">
+            <div class="container">
+                <h5 class="section-head">
+                    <span class="heading">Explore</span>
+                    <span class="sub-heading">Our Beautiful Hotels</span>
+                </h5>
+
+                <div class="grid">
+                    <div class="grid-item featured-hotels">
+                        <img src="./images/hotel_astro_resort.jpg" alt="" class="hotel-image">
+                        <h5 class="hotel-name">Astro Hotel</h5>
+                        <span class="hotel-price">From $200/Night</span>
+                        <div class="hotel-rating">
+                            <i class="fa fa-star rating"></i>
+                            <i class="fa fa-star rating"></i>
+                            <i class="fa fa-star rating"></i>
+                            <i class="fa fa-star rating"></i>
+                            <i class="fa fa-star-half rating"></i>
+                        </div>
+                        <a href="#" class="btn btn-gradient">Book Now
+                            <span class="dots"><i class="fas fa-ellipsis-h"></i></span>
+                        </a>
+                    </div>
+
+                    <div class="grid-item featured-hotels">
+                        <img src="./images/hotel_the_enchanted_garden.jpg" alt="" class="hotel-image">
+                        <h5 class="hotel-name">Enchanted Garden</h5>
+                        <span class="hotel-price">From $300/Night</span>
+                        <div class="hotel-rating">
+                            <i class="fa fa-star rating"></i>
+                            <i class="fa fa-star rating"></i>
+                            <i class="fa fa-star rating"></i>
+                            <i class="fa fa-star rating"></i>
+                            <i class="fa fa-star rating"></i>
+                        </div>
+                        <a href="#" class="btn btn-gradient">Book Now
+                            <span class="dots"><i class="fas fa-ellipsis-h"></i></span>
+                        </a>
+                    </div>
+
+                    <div class="grid-item featured-hotels">
+                        <img src="./images/hotel_the_paradise.jpg" alt="" class="hotel-image">
+                        <h5 class="hotel-name">The Paradise</h5>
+                        <span class="hotel-price">From $350/Night</span>
+                        <div class="hotel-rating">
+                            <i class="fa fa-star rating"></i>
+                            <i class="fa fa-star rating"></i>
+                            <i class="fa fa-star rating"></i>
+                            <i class="fa fa-star rating"></i>
+                            <i class="fa fa-star-half rating"></i>
+                        </div>
+                        <a href="#" class="btn btn-gradient">Book Now
+                            <span class="dots"><i class="fas fa-ellipsis-h"></i></span>
+                        </a>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+
     </main>
 
     <script src="main.js"></script>
