special offers updated

--- a/index.html
+++ b/index.html
@@ -169,6 +169,33 @@
             </div>
         </section>
 
+        <section class="offer">
+            <div class="container">
+                <div class="offer-content">
+                    <div class="discount">
+                        40% off
+                    </div>
+                    <h5 class="hotel-name">The Paradise</h5>
+                    <div class="hotel-rating">
+                        <i class="fa fa-star rating"></i>
+                        <i class="fa fa-star rating"></i>
+                        <i class="fa fa-star rating"></i>
+                        <i class="fa fa-star rating"></i>
+                        <i class="fa fa-star-half rating"></i>
+                    </div>
+                    <p class="paragraph">This is the best hotel in the world.
+                        Ek baar haame mauka to deke dekho.
+                        Naaraj nhi karenge aapko sir.
+                        Aap khush ho jaoge hamare service se.
+                    </p>
+                    <a href="#" class="btn btn-gradient">Book Now
+                        <span class="dots"><i class="fas fa-ellipsis-h"></i></span>
+                    </a>
+                    
+                </div>
+            </div>
+        </section>
+
     </main>
 
     <script src="main.js"></script>
