--- a/index.html
+++ b/index.html
@@ -196,6 +196,74 @@
             </div>
         </section>
 
+        <section class="rooms">
+            <div class="container">
+                <h5 class="section-head">
+                    <span class="heading">Luxurious</span>
+                    <span class="sub-heading">Affordable Rooms</span>
+                </h5>
+
+                <div class="grid rooms-grid">
+                    <div class="grid-item featured-rooms">
+                        <div class="image-wrap">
+                            <img src="./images/room_1.jpg" alt="" class="room-image">
+                            <h5 class="room-name">Astro Hotel</h5>
+                        </div>
+                        <div class="room-info-wrap">
+                            <span class="room-price">$200
+                                <span class="per-night">Per Night</span>
+                            </span>
+                            <p class="paragraph">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellat, dolores vel! Vel illum suscipit rem cumque necessitatibus tenetur aliquam dolorem nesciunt, molestias repellat at ipsa odio alias fugiat? Ipsa, voluptatem.</p>
+                            <a href="#" class="btn rooms-btn">Book Now &rAarr;</a>
+                        </div>
+                    </div>
+
+                    <div class="grid-item featured-rooms">
+                        <div class="image-wrap">
+                            <img src="./images/room_2.jpg" alt="" class="room-image">
+                            <h5 class="room-name">Astro Hotel</h5>
+                        </div>
+                        <div class="room-info-wrap">
+                            <span class="room-price">$200
+                                <span class="per-night">Per Night</span>
+                            </span>
+                            <p class="paragraph">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellat, dolores vel! Vel illum suscipit rem cumque necessitatibus tenetur aliquam dolorem nesciunt, molestias repellat at ipsa odio alias fugiat? Ipsa, voluptatem.</p>
+                            <a href="#" class="btn rooms-btn">Book Now &rAarr;</a>
+                        </div>
+                    </div>
+
+                    <div class="grid-item featured-rooms">
+                        <div class="image-wrap">
+                            <img src="./images/room_3.jpg" alt="" class="room-image">
+                            <h5 class="room-name">Astro Hotel</h5>
+                        </div>
+                        <div class="room-info-wrap">
+                            <span class="room-price">$200
+                                <span class="per-night">Per Night</span>
+                            </span>
+                            <p class="paragraph">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellat, dolores vel! Vel illum suscipit rem cumque necessitatibus tenetur aliquam dolorem nesciunt, molestias repellat at ipsa odio alias fugiat? Ipsa, voluptatem.</p>
+                            <a href="#" class="btn rooms-btn">Book Now &rAarr;</a>
+                        </div>
+                    </div>
+
+                    <div class="grid-item featured-rooms">
+                        <div class="image-wrap">
+                            <img src="./images/room_4.jpg" alt="" class="room-image">
+                            <h5 class="room-name">Astro Hotel</h5>
+                        </div>
+                        <div class="room-info-wrap">
+                            <span class="room-price">$200
+                                <span class="per-night">Per Night</span>
+                            </span>
+                            <p class="paragraph">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellat, dolores vel! Vel illum suscipit rem cumque necessitatibus tenetur aliquam dolorem nesciunt, molestias repellat at ipsa odio alias fugiat? Ipsa, voluptatem.</p>
+                            <a href="#" class="btn rooms-btn">Book Now &rAarr;</a>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+
     </main>
 
     <script src="main.js"></script>
