--- a/index.html
+++ b/index.html
@@ -264,6 +264,46 @@
             </div>
         </section>
 
+        <section class="contact">
+            <div class="container">
+                <h5 class="section-head">
+                    <span class="heading">Contact</span>
+                    <span class="sub-heading">Get In Touch With Us</span>
+                </h5>
+
+                <div class="contact-content">
+                    <div class="traveller-wrap">
+                        <img src="./images/traveler.png" alt="">
+                    </div>
+                    <form action="" class="form contact-form">
+                        <div class="input-group-wrap">
+                            <div class="input-group">
+                                <input type="text" class="input" placeholder="Name" required>
+                                <span class="bar"></span>
+                            </div>
+
+                            <div class="input-group">
+                                <input type="email" class="input" placeholder="E-mail" required>
+                                <span class="bar"></span>
+                            </div>
+                        </div> 
+
+                            <div class="input-group">
+                                <input type="text" class="input" placeholder="Subject">
+                                <span class="bar"></span>
+                            </div>
+                            <div class="input-group">
+                                <textarea class="input" cols="30" rows="8" placeholder="Name"></textarea>
+                                <span class="bar"></span>
+                            </div>
+                        <button type="submit" class="btn form-btn btn-purple">Send Message
+                            <span class="dots"><i class="fas fa-ellipsis-h"></i></span>
+                        </button>
+                    </form>
+                </div>
+            </div>
+        </section>
+
     </main>
 
     <script src="main.js"></script>
