--- a/index.html
+++ b/index.html
@@ -303,8 +303,33 @@
                 </div>
             </div>
         </section>
-
     </main>
+
+    <footer class="footer">
+        <div class="container">
+            <div class="footer-content">
+                <div class="footer-content-brand">
+                    <a href="index.html" class="logo">
+                        <img src="./images/logo.png" alt="" class="logo-image">
+                    </a>
+                    <div class="paragraph">
+                        Lorem ipsum dolor sit amet consecteeriam saepe, dignissimos odio ducimus nostrum eveniet laudantium omnis ipsum corrupti voluptatem beatae.
+                    </div>
+                </div>
+
+                <div class="social-media-wrap">
+                    <h4 class="footer-heading">Follow Us</h4>
+                    <div class="social-media">
+                        <a href="#" class="sm-link"><i class="fab fa-twitter"></i></a>
+                        <a href="#" class="sm-link"><i class="fab fa-facebook"></i></a>
+                        <a href="#" class="sm-link"><i class="fab fa-instagram"></i></a>
+                        <a href="#" class="sm-link"><i class="fab fa-pinterest"></i></a>
+                        <a href="#" class="sm-link"><i class="fab fa-tripadvisor"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 
     <script src="main.js"></script>
 </body>
