fully responsive with everything

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
         <section class="booking">
             <div class="container">
-                <form action="" class="form">
+                <form action="" class="book-form">
                     <div class="input-group">
                         <label for="destination" class="input-label">Destination</label>
                         <input type="text" class="input" id="destination">
@@ -278,12 +278,12 @@
                     <form action="" class="form contact-form">
                         <div class="input-group-wrap">
                             <div class="input-group">
-                                <input type="text" class="input" placeholder="Name" required>
+                                <input type="text" class="input" placeholder="Name" required autocomplete="off">
                                 <span class="bar"></span>
                             </div>
 
                             <div class="input-group">
-                                <input type="email" class="input" placeholder="E-mail" required>
+                                <input type="email" class="input" placeholder="E-mail" required autocomplete="off">
                                 <span class="bar"></span>
                             </div>
                         </div> 
